--- a/index.html
+++ b/index.html
@@ -103,32 +103,38 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-xl-5 col-lg-6 d-flex justify-content-center video-box align-items-stretch">
+          <!--<div class="col-xl-5 col-lg-6 d-flex justify-content-center video-box align-items-stretch">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-          </div>
+          </div>-->
 
-          <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
+          <div class="col-xl-12 col-lg-12 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-2 px-lg-5">
             <h3>Lizzy Wasi Boutique Hotel</h3>
             <p>Ubicado en el pueblo de Urubamba, a una hora de la ciudad del Cusco y a 20 minutos de Ollantaytambo — donde se toma el tren de 90 minutos a Machu Picchu.</p>
-
-            <div class="icon-box">
+</div>
+</div>
+<div class="row">
+            <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-spa"></i></div>
               <h4 class="title"><a href="">5 mil m2 de Áreas Verdes</a></h4>
               <p class="description">Con sólo 17 habitaciones, más de 5 mil metros cuadrados de áreas verdes, spa, sala de yoga, estacionamiento privado y más amenidades.</p>
             </div>
 
-            <div class="icon-box">
+            <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-coffee"></i></div>
               <h4 class="title"><a href="">Desayuno Incluido</a></h4>
               <p class="description">Su estadía incluye el desayuno de fuentes locales servido diariamente. Además contamos con restaurante, horno de pizzas y bar.</p>
             </div>
 
-            <div class="icon-box">
+            <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-bus"></i></div>
               <h4 class="title"><a href="">Transporte al Aeropuerto</a></h4>
               <p class="description">Lo ayudamos a coordinar sus necesidades de transporte personalizado para tours y recojo del aeropuerto.</p>
             </div>
-
+            <div class="col-lg-3 col-md-6 icon-box">
+              <div class="icon"><i class="bx bx-wifi"></i></div>
+              <h4 class="title"><a href="">Wifi</a></h4>
+              <p class="description">Lo ayudamos a coordinar sus necesidades de transporte personalizado para tours y recojo del aeropuerto.</p>
+            </div>
           </div>
         </div>
 
