--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Disfruta del Valle Sagrado de los Incas</h1>
           <h2>Lizzy Wasi Urubamba es el lugar ideal para explorar las maravillas del Cusco o desconectarse en un lugar rodeado de naturaleza y buen servicio.</h2>
-          <div><a href="https://hotels.cloudbeds.com/reservation/flgeLO" target="_blank" class="btn-get-started scrollto">Reservar</a></div>
+          <div><!--<a href="https://hotels.cloudbeds.com/reservation/flgeLO" target="_blank" class="btn-get-started scrollto">Reservar</a>--><script src="https://hotels.cloudbeds.com/widget/load/flgeLO/horiz?newWindow=1"></script></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <img src="assets/img/hero-img.png" class="img-fluid" alt="">
@@ -115,25 +115,25 @@
 <div class="row">
             <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-spa"></i></div>
-              <h4 class="title"><a href="">5 mil m2 de Áreas Verdes</a></h4>
-              <p class="description">Con sólo 17 habitaciones, más de 5 mil metros cuadrados de áreas verdes, spa, sala de yoga, estacionamiento privado y más amenidades.</p>
+              <h4 class="title">5 mil m2 de Áreas Verdes</h4>
+              <p class="description">Con 17 habitaciones y más de 5 mil m2 de áreas verdes.</p>
             </div>
 
             <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-coffee"></i></div>
-              <h4 class="title"><a href="">Desayuno Incluido</a></h4>
-              <p class="description">Su estadía incluye el desayuno de fuentes locales servido diariamente. Además contamos con restaurante, horno de pizzas y bar.</p>
+              <h4 class="title">Desayuno Incluido</h4>
+              <p class="description">Con su estadía se incluye el desayuno de fuentes locales.</p>
             </div>
 
             <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-bus"></i></div>
-              <h4 class="title"><a href="">Transporte al Aeropuerto</a></h4>
-              <p class="description">Lo ayudamos a coordinar sus necesidades de transporte personalizado para tours y recojo del aeropuerto.</p>
+              <h4 class="title">Transporte al Aeropuerto</h4>
+              <p class="description">Lo ayudamos a coordinar sus necesidades de transporte.</p>
             </div>
             <div class="col-lg-3 col-md-6 icon-box">
               <div class="icon"><i class="bx bx-wifi"></i></div>
-              <h4 class="title"><a href="">Wifi</a></h4>
-              <p class="description">Lo ayudamos a coordinar sus necesidades de transporte personalizado para tours y recojo del aeropuerto.</p>
+              <h4 class="title">Wifi</h4>
+              <p class="description">Internet de alta velocidad en todo el hotel.</p>
             </div>
           </div>
         </div>
@@ -237,7 +237,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/classica.png" class="img-fluid" alt="">
                 <div class="social">
                   <!--<a href=""><i class="icofont-twitter"></i></a>-->
                   <a href="" class="btn-get-started scrollto">Más Información</a>
@@ -253,7 +253,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/balcony.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href="deluxe.html" class="btn-get-started scrollto">Más Información</a>
                 </div>
@@ -268,7 +268,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/deluxe.png" class="img-fluid" alt="">
                 <div class="social">
                     <a href="" class="btn-get-started scrollto">Más Información</a>
                 </div>
@@ -283,7 +283,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/bungalow.png" class="img-fluid" alt="">
                 <div class="social">
                 <a href="" class="btn-get-started scrollto">Más Información</a>
                 </div>
@@ -412,14 +412,14 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Restaurante</a></h4>
+              <h4 class="title"><a href="">Restaurante & Bar</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Bar</a></h4>
+              <h4 class="title"><a href="">Estacionamiento Privado</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
