--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Hotel</a></li>
           <li><a href="#team">Habitaciones</a></li>
-          <li><a href="#services">Amenidades</a></li>
+          <!--<li><a href="#services">Amenidades</a></li>-->
           <li><a href="#portfolio">Actividades</a></li>
           <!--<li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -83,7 +83,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center heroe">
           <h1>Disfruta del Valle Sagrado de los Incas</h1>
           <h2>Lizzy Wasi Urubamba es el lugar ideal para explorar las maravillas del Cusco o desconectarse en un lugar rodeado de naturaleza y buen servicio.</h2>
           <div><!--<a href="https://hotels.cloudbeds.com/reservation/flgeLO" target="_blank" class="btn-get-started scrollto">Reservar</a>--><script src="https://hotels.cloudbeds.com/widget/load/flgeLO/horiz?newWindow=1"></script></div>
@@ -399,7 +399,7 @@
       </div>
     </section> End Clients Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section ======= 
     <section id="services" class="services section-bg">
       <div class="container">
 
@@ -408,17 +408,17 @@
           <p>Una cena y un chilcano después de un día de aventura? O una fogata con amigos y pizza a la leña? Lizzy Wasi cuenta con varias amenidades para disfrutar durante su estadía.</p>
         </div>
 
-        <div class="row">
+       <!-- <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <!--<div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>-->
+              <!--<div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>
               <h4 class="title"><a href="">Restaurante & Bar</a></h4>
               <p class="description">Vea nuestro menú <a href="">aquí.</a></p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <!--<div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>-->
+              <!--<div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>
               <h4 class="title"><a href="">Estacionamiento Privado</a></h4>
               <p class="description"> </p>
             </div>
@@ -426,14 +426,14 @@
 
           <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
             <div class="icon-box">
-              <!--<div class="icon"><i class="las la-file-alt" style="color: #3fcdc7;"></i></div>-->
+              <!--<div class="icon"><i class="las la-file-alt" style="color: #3fcdc7;"></i></div>
               <h4 class="title"><a href="">Zona de Fogatas</a></h4>
               <p class="description"> </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
             <div class="icon-box">
-              <!--<div class="icon"><i class="las la-tachometer-alt" style="color:#41cf2e;"></i></div>-->
+              <!--<div class="icon"><i class="las la-tachometer-alt" style="color:#41cf2e;"></i></div>
               <h4 class="title"><a href="">Sala de Yoga</a></h4>
               <p class="description"> </p>
             </div>
@@ -441,14 +441,14 @@
 
           <div class="col-lg-4 col-md-6" data-wow-delay="0.2s">
             <div class="icon-box">
-              <!--<div class="icon"><i class="las la-globe-americas" style="color: #d6ff22;"></i></div>-->
+              <!--<div class="icon"><i class="las la-globe-americas" style="color: #d6ff22;"></i></div>
               <h4 class="title"><a href="">Spa (próximamente)</a></h4>
               <p class="description"> </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-wow-delay="0.2s">
             <div class="icon-box">
-              <!--<div class="icon"><i class="las la-clock" style="color: #4680ff;"></i></div>-->
+              <!--<div class="icon"><i class="las la-clock" style="color: #4680ff;"></i></div>
               <h4 class="title"><a href="">Zona de Juegos</a></h4>
               <p class="description"> </p>
             </div>
@@ -464,7 +464,7 @@
 
         <div class="section-title">
           <h2>Actividades</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Una fogata con amigos y pizza a la leña después de un día de explorar el valle sagrado? Lizzy Wasi cuenta con varias amenidades para disfrutar durante su estadía.</p>
         </div>
 
         <div class="row">
@@ -484,11 +484,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fogata.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Fogata</h4>
-                <p>Fogata</p>
+                <h4>Zona de Fogata</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fogata.png" data-gall="portfolioGallery" class="venobox" title="Fogata"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -498,8 +498,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/lomo.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Restaurante</h4>
-                <p>Restaurante</p>
+                <h4>Restaurante & Bar</h4>
+                <p>Más infomación aquí</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/lomo.png" data-gall="portfolioGallery" class="venobox" title="lomo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -512,11 +512,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/yoga.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Yoga</h4>
-                <p>Yoga</p>
+                <h4>Sala de Yoga</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/yoga.png" data-gall="portfolioGallery" class="venobox" title="yoga"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -526,11 +526,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/chinchero.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Chinchero</h4>
-                <p>Chinchero</p>
+                <h4>Pueblo de Chinchero</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/chinchero.png" data-gall="portfolioGallery" class="venobox" title="chinchero"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -540,11 +540,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/moray.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Moray</h4>
-                <p>Moray</p>
+                <h4>Ruinas de Moray</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/moray.png" data-gall="portfolioGallery" class="venobox" title="moray"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -554,11 +554,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/luna.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Caballos</h4>
-                <p>Caballos</p>
+                <h4>Paseos a Caballo</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/luna.png" data-gall="portfolioGallery" class="venobox" title="caballos"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -568,11 +568,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/maras.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Salinerad de Maras</h4>
-                <p>Salineras de Maras</p>
+                <h4>Salineras de Maras</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/maras.png" data-gall="portfolioGallery" class="venobox" title="maras"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -582,11 +582,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/mp.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Machu Picchu</h4>
-                <p>Card</p>
+                <h4>Visita Machu Picchu</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/mp.png" data-gall="portfolioGallery" class="venobox" title="machupicchu"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -596,11 +596,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/bike.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Aventura</h4>
-                <p>Aventura</p>
+                <h4>Expediciones & Aventura</h4>
+                <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/bike.png" data-gall="portfolioGallery" class="venobox" title="bike"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -804,7 +804,7 @@
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Políticas del Hotel</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Cancelación de reservas, horarios, y demás políticas de Lizzy Wasi.</p>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#"></a>Políticas Generales</li>
               <li><i class="bx bx-chevron-right"></i> <a href="https://f.hubspotusercontent40.net/hubfs/5717293/Plan%20de%20Protecci%C3%B3n%20ante%20Covit%2019%20Hotel%20Lizzy%20Wasi.pdf" target="_blank">Covid 19</a></li>
@@ -813,7 +813,7 @@
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Social Media</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Síguenos en social media, y ve nuestras promociones y novedades.</p>
             <div class="social-links mt-3">
               <a href="https://www.facebook.com/lizzywasihotel" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/lizzywasi/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
