--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 <p>Más infomación aquí</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/lomo.png" data-gall="portfolioGallery" class="venobox" title="lomo"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="https://restaurante.lizzywasi.com/" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
