--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Lizzy Wasi Urubamba</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="El Hotel Lizzy Wasi Urubamba es ideal para explorar las maravillas del valle sagrado o desconectarse en un lugar rodeado de naturaleza y buen servicio." name="description">
+  <meta content="hotel urubamba, lizzy wasi urubamba, hoteles en urubamba, hotel valle sagrado, lizzy wasi, lizzywasi" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/LW_favicon.png" rel="icon">
@@ -58,15 +58,9 @@
               <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
               <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>-->
           <li><a href="#contact">Contacto</a></li>
@@ -134,7 +128,7 @@
           </div>-->
 
           <div class="col-xl-12 col-lg-12 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-2 px-lg-5">
-            <h3>Lizzy Wasi Boutique Hotel</h3>
+            <h3>Lizzy Wasi Boutique hotel</h3>
             <p>Ubicado en el pueblo de Urubamba, a una hora de la ciudad del Cusco y a 20 minutos de Ollantaytambo — donde se toma el tren de 90 minutos a Machu Picchu.</p>
 </div>
 </div>
@@ -815,8 +809,6 @@
             <!--<h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
             </ul>--> 
             <h3>Hotel Lizzy Wasi</h3>
             <p>
