--- a/en/home.html
+++ b/en/home.html
@@ -64,7 +64,7 @@
             </ul>
           </li>-->
           <li><a href="#contact">Contact Us</a></li>
-          <li><a href="#contact">Español</a></li>
+          <li><a href="../index.html">Español</a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -165,8 +165,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Ideal Para Aventura o Descanso</h2>
-          <p>Con vista al nevado Chicón y a pocos minutos de la plaza de Urubamba, Lizzy Wasi cuenta con todo lo que necesitas para tu viaje al valle sagrado, ya sea para disfrutar en familia, en pareja, o con amigos.</p>
+          <h2>Ideal for Exploring or just Relaxing</h2>
+          <p>With a view of snowcap mountains and just a few minutes from Urubamba’s main square, Lizzy Wasi offers everything you need for your trip to the Sacred Valley.</p>
         </div>
 
         <div class="row no-gutters">
@@ -247,8 +247,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Habitaciones</h2>
-          <p>Todas las habitaciones cuentan con decoración auténtica, entrada independiente y vista a los jardines y montañas del valle sagrado.</p>
+          <h2>Rooms</h2>
+          <p>Each room is authentically decorated, had garden access, and views of the garden and mountains of the Sacred Valley.</p>
         </div>
 
         <div class="row">
@@ -482,7 +482,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Actividades</h2>
+          <h2>Things to Do</h2>
           <p>Una fogata con amigos y pizza a la leña después de un día de explorar el valle sagrado? Lizzy Wasi cuenta con varias amenidades para disfrutar durante su estadía.</p>
         </div>
 
@@ -704,7 +704,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contacto</h2>
+          <h2>Contact Us</h2>
           <p>A unos minutos de la plaza y mercado de Urubamba, cerca a las ruinas de Moray y las salineras de Maras, y a 20 minutos de Ollantaytambo — donde se toma el tren de 90 minutos a Machu Picchu.</p>
         </div>
 
@@ -718,7 +718,7 @@
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
-                <h4>Dirección:</h4>
+                <h4>Address:</h4>
                 <p>Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
               Urubamba, Cusco - Perú</p>
               </div>
@@ -731,7 +731,7 @@
 
               <div class="phone">
                 <i class="icofont-brand-whatsapp"></i>
-                <h4>Teléfono / WhatsApp:</h4>
+                <h4>Phone / WhatsApp:</h4>
                 <p><a href="https://api.whatsapp.com/send?phone=51966089439" target="_blank">+51966089439</a> | <a href="https://api.whatsapp.com/send?phone=51966089439" target="_blank">+51985513475</a></p>
               </div>
              
