--- a/en/home.html
+++ b/en/home.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Lizzy Wasi Urubamba</title>
-  <meta content="El Hotel Lizzy Wasi Urubamba es ideal para explorar las maravillas del valle sagrado o desconectarse en un lugar rodeado de naturaleza y buen servicio." name="description">
-  <meta content="hotel urubamba, lizzy wasi urubamba, hoteles en urubamba, hotel valle sagrado, lizzy wasi, lizzywasi" name="keywords">
+  <meta content="Lizzy Wasi is the ideal home base to start exploring the wonders of the Sacred Valley and Cusco." name="description">
+  <meta content="urubamba hotel, lizzy wasi urubamba, hotels in urubamba, hotel sacred valley, lizzy wasi, lizzywasi" name="keywords">
 
   <!-- Favicons -->
   <link href="../assets/img/LW_favicon.png" rel="icon">
@@ -104,7 +104,7 @@
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center heroe">
           <h1>Welcome to the Sacred Valley</h1>
-          <h2>Surrounded by nature and only a few minutes from the town of Urubamba,  Lizzy Wasi is the ideal home base to start exploring the wonders of the Sacred Valley and Cusco.</h2>
+          <h2>Surrounded by nature and only a few minutes from the town of Urubamba, Lizzy Wasi is the ideal home base to start exploring the wonders of the Sacred Valley and Cusco.</h2>
           <div><!--<a href="https://hotels.cloudbeds.com/reservation/flgeLO" target="_blank" class="btn-get-started scrollto">Reservar</a>--><script src="https://hotels.cloudbeds.com/widget/load/flgeLO/horiz?newWindow=1"></script></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
@@ -324,7 +324,7 @@
       <div class="container">
 
         <div class="text-center title">
-          <h3>La Opinión de Nuestros Huéspedes</h3>
+          <h3>Guest Reviews</h3>
           <p>Lizzy Wasi es constantemente elegido como uno de los mejores hoteles del valle sagrado. Lea los reviews de nuestros huéspedes viajeros en TripAdvisor.</p>
         </div>
 
@@ -334,7 +334,7 @@
             <!--<span data-toggle="counter-up">232</span>
             <p>Clients</p>-->
             <div class="client-logo">
-              <a href="https://www.tripadvisor.com/Hotel_Review-g294321-d1837791-Reviews-Boutique_Hotel_Lizzy_Wasi-Urubamba_Sacred_Valley_Cusco_Region.html" target="_blank"><img src="assets/img/tripadvisor2020.png" class="img-fluid" alt="" style="max-width: 145px"></a>
+              <a href="https://www.tripadvisor.com/Hotel_Review-g294321-d1837791-Reviews-Boutique_Hotel_Lizzy_Wasi-Urubamba_Sacred_Valley_Cusco_Region.html" target="_blank"><img src="../assets/img/tripadvisor2020.png" class="img-fluid" alt="" style="max-width: 145px"></a>
             </div>
 
           </div>
