--- a/en/home.html
+++ b/en/home.html
@@ -248,7 +248,7 @@
 
         <div class="section-title">
           <h2>Rooms</h2>
-          <p>Each room is authentically decorated, had garden access, and views of the garden and mountains of the Sacred Valley.</p>
+          <p>Each room is authentically decorated, has garden access, and views of the garden and mountains of the Sacred Valley.</p>
         </div>
 
         <div class="row">
@@ -259,12 +259,12 @@
                 <img src="../assets/img/team/classica.png" class="img-fluid" alt="">
                 <div class="social">
                   <!--<a href=""><i class="icofont-twitter"></i></a>-->
-                  <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">Más Información</a>
+                  <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">More Info</a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Doble Clásica</h4>
-                <span>Hasta 3 personas</span>
+                <h4>Doble Clasic</h4>
+                <span>Up to 3 people</span>
               </div>
             </div>
           </div>
@@ -274,12 +274,12 @@
               <div class="member-img">
                 <img src="../assets/img/team/balcony.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">Más Información</a>
+                  <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">More Info</a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Deluxe con Balcón</h4>
-                <span>Hasta 4 personas</span>
+                <h4>Deluxe with Balcony</h4>
+                <span>Upto 4 people</span>
               </div>
             </div>
           </div>
@@ -289,12 +289,12 @@
               <div class="member-img">
                 <img src="../assets/img/team/deluxe.png" class="img-fluid" alt="">
                 <div class="social">
-                    <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">Más Información</a>
+                    <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">More Info</a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Familiar con Balcón</h4>
-                <span>Hasta 5 personas</span>
+                <h4>Family Room with Balcony</h4>
+                <span>Up to 5 people</span>
               </div>
             </div>
           </div>
@@ -304,12 +304,12 @@
               <div class="member-img">
                 <img src="../assets/img/team/bungalow.png" class="img-fluid" alt="">
                 <div class="social">
-                <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">Más Información</a>
+                <a href="https://hotels.cloudbeds.com/reservation/flgeLO" class="btn-get-started scrollto" target="_blank">More Info</a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Bungalow</h4>
-                <span>Hasta 6 personas</span>
+                <span>Up to 6 people</span>
               </div>
             </div>
           </div>
@@ -325,7 +325,7 @@
 
         <div class="text-center title">
           <h3>Guest Reviews</h3>
-          <p>Lizzy Wasi es constantemente elegido como uno de los mejores hoteles del valle sagrado. Lea los reviews de nuestros huéspedes viajeros en TripAdvisor.</p>
+          <p>Lizzy Wasi is constantly selected as one of the best hotels in the Sacred Valley. Read our guests reviews on TripAdvisor. </p>
         </div>
 
         <div class="row counters">
@@ -483,15 +483,15 @@
 
         <div class="section-title">
           <h2>Things to Do</h2>
-          <p>Una fogata con amigos y pizza a la leña después de un día de explorar el valle sagrado? Lizzy Wasi cuenta con varias amenidades para disfrutar durante su estadía.</p>
+          <p>Enjoy our wood-fired pizza or delicious locally sourced food after a day of exploring ancient ruins, and much more. Lizzy Wasi has all the amenities you’ll need to enjoy your Sacred Valley and Machu Picchu trip. </p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">Todas</li>
+              <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Hotel</li>
-              <li data-filter=".filter-card">Valle Sagrado</li>
+              <li data-filter=".filter-card">Sacred Valley</li>
               <!--<li data-filter=".filter-web">Web</li>-->
             </ul>
           </div>
@@ -503,7 +503,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/fogata.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Zona de Fogata</h4>
+                <h4>Fire Pit Area</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/fogata.png" data-gall="portfolioGallery" class="venobox" title="Fogata"><i class="bx bx-plus"></i></a>
@@ -517,8 +517,8 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/lomo.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Restaurante & Bar</h4>
-                <p>Más infomación aquí</p>
+                <h4>Restaurant & Bar</h4>
+                <p>More informantion here</p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/lomo.png" data-gall="portfolioGallery" class="venobox" title="lomo"><i class="bx bx-plus"></i></a>
                   <a href="https://restaurante.lizzywasi.com/" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
@@ -531,7 +531,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/yoga.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Sala de Yoga</h4>
+                <h4>Yoga Room</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/yoga.png" data-gall="portfolioGallery" class="venobox" title="yoga"><i class="bx bx-plus"></i></a>
@@ -545,7 +545,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/chinchero.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Pueblo de Chinchero</h4>
+                <h4>Chinchero Town</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/chinchero.png" data-gall="portfolioGallery" class="venobox" title="chinchero"><i class="bx bx-plus"></i></a>
@@ -559,7 +559,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/moray.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Ruinas de Moray</h4>
+                <h4>Moray Ruins</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/moray.png" data-gall="portfolioGallery" class="venobox" title="moray"><i class="bx bx-plus"></i></a>
@@ -573,7 +573,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/luna.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Paseos a Caballo</h4>
+                <h4>Horseback Riding</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/luna.png" data-gall="portfolioGallery" class="venobox" title="caballos"><i class="bx bx-plus"></i></a>
@@ -587,7 +587,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/maras.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Salineras de Maras</h4>
+                <h4>Maras Salt Mines</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/maras.png" data-gall="portfolioGallery" class="venobox" title="maras"><i class="bx bx-plus"></i></a>
@@ -601,7 +601,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/mp.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Visita Machu Picchu</h4>
+                <h4>Machu Picchu</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/mp.png" data-gall="portfolioGallery" class="venobox" title="machupicchu"><i class="bx bx-plus"></i></a>
@@ -615,7 +615,7 @@
             <div class="portfolio-wrap">
               <img src="../assets/img/portfolio/bike.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Expediciones & Aventura</h4>
+                <h4>Expeditions & Adventure</h4>
                 <p></p>
                 <div class="portfolio-links">
                   <a href="../assets/img/portfolio/bike.png" data-gall="portfolioGallery" class="venobox" title="bike"><i class="bx bx-plus"></i></a>
@@ -705,7 +705,7 @@
 
         <div class="section-title">
           <h2>Contact Us</h2>
-          <p>A unos minutos de la plaza y mercado de Urubamba, cerca a las ruinas de Moray y las salineras de Maras, y a 20 minutos de Ollantaytambo — donde se toma el tren de 90 minutos a Machu Picchu.</p>
+          <p>A few walking minutes from Urubambas main square and market, near the Moray ruins and Maras salt mines, and a 20-minute drive from Ollantaytambo — the departing station for the 90-minute to Machu Picchu train ride. </p>
         </div>
 
         <div>
@@ -820,8 +820,8 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Políticas del Hotel</h4>
-            <p>Cancelación de reservas, horarios, impuestos y demás políticas de Lizzy Wasi.</p>
+            <h4>Hotel Policies</h4>
+            <p>Cancelations, schedule, and other Lizzy Wasi hotel policies.</p>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="politicas_lizzywasi.html">POLITICAS GENERALES</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="https://f.hubspotusercontent40.net/hubfs/5717293/Plan%20de%20Protecci%C3%B3n%20ante%20Covit%2019%20Hotel%20Lizzy%20Wasi.pdf" target="_blank">Covid 19</a></li>
@@ -830,7 +830,7 @@
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Social Media</h4>
-            <p>Síguenos en social media, y ve nuestras promociones y novedades.</p>
+            <p>Follow us on social media to learn about our promotions (and trip inspiration tips).</p>
             <div class="social-links mt-3">
               <a href="https://www.facebook.com/lizzywasihotel" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/lizzywasi/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
