Add cache-busting parameter to hero images

--- a/es/home.html
+++ b/es/home.html
@@ -132,9 +132,9 @@ src="https://www.facebook.com/tr?id=846952037145066&ev=PageView&noscript=1"
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <picture>
-            <source media="(max-width: 768px)" srcset="../assets/img/hero-garden-mobile.jpg">
-            <source media="(max-width: 1024px)" srcset="../assets/img/hero-garden-tablet.jpg">
-            <img src="../assets/img/hero-garden-desktop.jpg" class="img-fluid" alt="Vista del jardín de Lizzy Wasi con las montañas del Valle Sagrado">
+            <source media="(max-width: 768px)" srcset="../assets/img/hero-garden-mobile.jpg?v=1">
+            <source media="(max-width: 1024px)" srcset="../assets/img/hero-garden-tablet.jpg?v=1">
+            <img src="../assets/img/hero-garden-desktop.jpg?v=1" class="img-fluid" alt="Vista del jardín de Lizzy Wasi con las montañas del Valle Sagrado">
           </picture>
         </div>
       </div>
