--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ src="https://www.facebook.com/tr?id=846952037145066&ev=PageView&noscript=1"
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
           <picture>
-            <source media="(max-width: 768px)" srcset="assets/img/hero-garden-mobile.jpg">
-            <source media="(max-width: 1024px)" srcset="assets/img/hero-garden-tablet.jpg">
-            <img src="assets/img/hero-garden-desktop.jpg" class="img-fluid" alt="Lizzy Wasi garden view with Sacred Valley mountains">
+            <source media="(max-width: 768px)" srcset="assets/img/hero-garden-mobile.jpg?v=1">
+            <source media="(max-width: 1024px)" srcset="assets/img/hero-garden-tablet.jpg?v=1">
+            <img src="assets/img/hero-garden-desktop.jpg?v=1" class="img-fluid" alt="Lizzy Wasi garden view with Sacred Valley mountains">
           </picture>
         </div>
       </div>
